--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "migrate": "babel-node migrations/1_create_tables.js",
     "migrate-down": "babel-node migrations/1_drop_tables.js",
     "seed": "babel-node seeds/seed.js",
-    "db:reset": "npm run migrate-down && npm run migrate && npm run seed"
+    "db:reset": "npm run migrate-down && npm run migrate && npm run seed",
+    "dev": "babel-watch src/bin/www.js"
   },
   "keywords": [],
   "author": "Koryun",
